@@ -1,0 +1,26 @@
+String::Similarity::Group
+===============================================
+
+INSTALLATION
+
+See INSTALL.
+
+DEPENDENCIES
+
+   Carp
+   Cwd
+   Exporter
+   Getopt::Std::Strict
+   Smart::Comments
+   String::Similarity
+   Test::Simple
+   YAML
+
+COPYRIGHT AND LICENCE
+
+Copyright (C) 2008 by Leo Charre leocharre at cpan dot org
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself, either Perl version 5.8.8 or,
+at your option, any later version of Perl 5 you may have available.
+   
